# robot-template

./: .dockerignore  .gitignore  Dockerfile.hud  QUICKSTART.md  README.md  pyproject.toml  run.py  test_install.py
environment/: config.py  contract.json  contract_lerobot.json  env.py  env_streamer.py  full_bench_tasks.json  lerobot_sim.py  libero_ee_abs.json  libero_ee_del.json  libero_sim_bridge.py  tasks.py  utilities.py
examples/: batched.py  local.py  remote.py
inventory/agents/: pi05_libero.py  smolvla_libero.py  vla_jepa_libero.py
inventory/agents/remote/scaffold/: my_policy_serve.py  my_remote_agent.py
inventory/agents/remote/smolvla/: smolvla_libero_remote.py  smolvla_serve.py
inventory/agents/scaffold/: my_agent.py
inventory/envs/remote/daytona/: deploy.py  run.py
inventory/envs/remote/modal/: deploy.py  run.py
inventory/envs/robolab/: config.py  docker.md  env.py  robolab_ee_abs.json  robolab_ee_del.json  robolab_joint_pos.json  robolab_sim_bridge.py  sim_process.py
inventory/envs/scaffold/: config.py  env.py  example_contract.json  my_sim_bridge.py
inventory/envs/simpler/: config.py  docker.md  env.py  simpler_ee_abs.json  simpler_ee_del.json  simpler_sim_bridge.py
skills/robot-integration/: SKILL.md
