[project]
name = "robot-template"
version = "0.1.0"
description = "SmolVLA x LIBERO over HUD's robot capability"
requires-python = ">=3.11"

dependencies = [
    "hud[robot]>=0.6.10",              # Environment, env.gym, RobotAgent, openpi/0 codec
    "lerobot[smolvla,libero]>=0.6.0",  # the policy + the LIBERO sim (pulls torch)
]

[tool.uv]
package = false  # run in place (python run.py), not installed
